--- a/frontend/src/assets/styles/setup/_variables.scss
+++ b/frontend/src/assets/styles/setup/_variables.scss
@@ -111,6 +111,7 @@
     --ds-text-inverse: #ffffff;
     --ds-text-selected: #0c66e4;
 
+    --ds-icon: #44546f;
     --ds-icon-accent-red: #c9372c;
 
     --create-menu-button-color: var(--ds-text-inverse);
